# one-system

./: .dockerignore  .env.docker  .env.example  .gitignore  AUDIT_REPORT.md  DEPLOYMENT.md  DESIGN_SYSTEM.md  Dockerfile  PACKAGES_FRESHNESS.md  PACKAGES_REVIEW.md  composer.json  deploy-docker.sh  deploy.sh  design-preview.html  docker-compose.yml  docker-production.yml
app/Casts/: EncryptedArrayFallback.php  EncryptedFallback.php
app/Http/: Kernel.php
app/Models/: AuditLog.php  ClientSystem.php  IpWhitelist.php  SecuritySetting.php  SsoSetting.php  SsoToken.php  User.php  UserClientLink.php  UserClientSystem.php  UserSecurity.php
app/Rules/: PasswordComplexity.php
app/Services/: AuthService.php  ClientCredentialValidator.php  QrCodeService.php  SignatureService.php  SsoConfigService.php  SsoService.php
bootstrap/: app.php
config/: cors.php  database.php  database_schemas.php  jwt.php  livewire.php
database/migrations/: 2025_08_05_060100_create_schemas_first.php  2025_08_05_060110_create_users_table.php  2025_08_05_060120_create_client_systems_table.php  2025_08_05_060130_create_user_client_links_table.php  2025_08_05_060140_create_sso_tokens_table.php  2025_08_05_060150_create_ip_whitelist_table.php  2025_08_05_060160_create_audit_logs_table.php  2025_08_05_060180_create_sso_settings_table.php  (+8 more)
docker/: entrypoint.sh
docker/nginx/: default.conf  (+2 more)
examples/: .env.example  README.md  docker-compose.yml
examples/rust/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
examples/rust/src/: db.rs  main.rs
routes/: api.php  web.php
(+256 files in other folders)
